--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -293,3 +293,44 @@ nav ul li a:hover{
 
 /**/
 
+.profile-info{
+    float: left;
+    width: 25%;
+}
+.profile-info img{
+    position: relative;
+    width: 80%;
+    padding: 10px;
+    background-color: white;
+    border: 1.5px solid silver;
+}
+
+/*main content profile*/
+.main-content-profile{
+    background-color: rgba(72, 79, 86, 0.6);
+    height: 80%;
+    position: absolute;
+    top: 15%;
+    left: 15%;
+    width: 65%; 
+    padding: 2% 15px; 
+    margin: auto;
+    border-radius: 20px;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.personal-profile{
+    float: right;
+}
+
+.profile-buttons{
+    display: inline-block;
+}
+.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+
